--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ember-data": "^2.3.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
+    "ember-i18n": "4.2.0",
     "ember-resolver": "^2.0.3",
     "express": "^4.13.4",
     "glob": "^4.5.3",
