--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
     "ember-i18n": "4.2.0",
+    "ember-power-select": "0.8.2",
     "ember-resolver": "^2.0.3",
+    "ember-select-2": "1.3.0",
     "express": "^4.13.4",
     "glob": "^4.5.3",
     "morgan": "^1.6.1"
